--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -1,22 +1,11 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.12)
 
 project(sfml_experiments)
-
-file(GLOB SOURCES "src/*.cpp")
-include_directories("src")
-
-add_executable(sfml_experiments ${SOURCES})
 
 # SFML
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 find_package(SFML REQUIRED network audio graphics window system)
-if(SFML_FOUND)
-  include_directories(${SFML_INCLUDE_DIR})
-  target_link_libraries(sfml_experiments ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
-endif()
 
-set_target_properties(sfml_experiments PROPERTIES
-    CXX_STANDARD 11
-)
+include_directories(modules/fatty/inc)
 
-install(TARGETS sfml_experiments DESTINATION ${CMAKE_SOURCE_DIR}/bin)
+add_subdirectory(modules/games/colors)
