--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -2,10 +2,19 @@ cmake_minimum_required(VERSION 3.12)
 
 project(sfml_experiments)
 
+# OPENGL
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+
+# GLEW
+find_package(GLEW REQUIRED)
+include_directories(${GLEW_INCLUDE_DIR})
+
 # SFML
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 find_package(SFML REQUIRED network audio graphics window system)
 
 include_directories(modules/fatty/inc)
 
-add_subdirectory(modules/games/colors)
+add_subdirectory(modules/games/2dsample)
+add_subdirectory(modules/games/3dsample)
