--- a/cmakelists.txt
+++ b/cmakelists.txt
@@ -10,6 +10,10 @@ include_directories(${OPENGL_INCLUDE_DIR})
 find_package(GLEW REQUIRED)
 include_directories(${GLEW_INCLUDE_DIR})
 
+# GLM
+find_package(GLM REQUIRED)
+include_directories(${GLM_INCLUDE_DIR})
+
 # SFML
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake_modules" ${CMAKE_MODULE_PATH})
 find_package(SFML REQUIRED network audio graphics window system)
